--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Colours</title>
 </head>
 <body>
-    
+    <div class="col">
+        <h2> Text</h2>
+
+        <button>lock</button>
+    </div>
+
+    <div class="col">
+        <h2> Text</h2>
+
+        <button>lock</button>
+    </div>
+
+    <div class="col">
+        <h2> Text</h2>
+
+        <button>lock</button>
+    </div>
+
+    <div class="col">
+        <h2> Text</h2>
+
+        <button>lock</button>
+    </div>
+
+    <div class="col">
+        <h2> Text</h2>
+
+        <button>lock</button>
+    </div>
 </body>
 </html>
