--- a/index.html
+++ b/index.html
@@ -4,37 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Phudu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Colours</title>
 </head>
 <body>
     <div class="col">
         <h2> Text</h2>
 
-        <button>lock</button>
+        <button>
+            <i class="fa-solid fa-lock"></i>
+            <!-- <i class="fa-solid fa-lock-open"></i> -->
+        </button>
     </div>
 
     <div class="col">
         <h2> Text</h2>
 
-        <button>lock</button>
+        <button>
+            <i class="fa-solid fa-lock"></i>
+        </button>
     </div>
 
     <div class="col">
         <h2> Text</h2>
 
-        <button>lock</button>
+        <button>
+            <i class="fa-solid fa-lock"></i>
+        </button>
     </div>
 
     <div class="col">
         <h2> Text</h2>
 
-        <button>lock</button>
+        <button>
+            <i class="fa-solid fa-lock"></i>
+        </button>
     </div>
 
     <div class="col">
         <h2> Text</h2>
 
-        <button>lock</button>
+        <button>
+            <i class="fa-solid fa-lock"></i>
+        </button>
     </div>
 </body>
 </html>
