locks on colons

--- a/index.html
+++ b/index.html
@@ -16,46 +16,45 @@
     <div class="col">
         <h2> Text</h2>
 
-        <button>
-            <i class="fa-solid fa-lock"></i>
-            <!-- <i class="fa-solid fa-lock-open"></i> -->
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open data-type="lock""></i>
         </button>
     </div>
 
-    <div class="col col1">
+    <!-- <div class="col col1">
         <h2>Text</h2>
-        <button>u</button>
-    </div>
+        <button><a href="https://www.avito.ru/" target="_blank">avito</a></button>
+    </div> -->
 
     <div class="col">
         <h2> Text</h2>
 
-        <button>
-            <i class="fa-solid fa-lock"></i>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open data-type="lock""></i>
         </button>
     </div>
 
     <div class="col">
         <h2> Text</h2>
 
-        <button>
-            <i class="fa-solid fa-lock"></i>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open data-type="lock""></i>
         </button>
     </div>
 
     <div class="col">
         <h2> Text</h2>
 
-        <button>
-            <i class="fa-solid fa-lock"></i>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open data-type="lock""></i>
         </button>
     </div>
 
     <div class="col">
         <h2> Text</h2>
 
-        <button>
-            <i class="fa-solid fa-lock"></i>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open data-type="lock""></i>
         </button>
     </div>
 </body>
